# serializer version: 1
# name: TestUsageServiceSnapshot.test_get_data_processing_usage_stats_snapshot
  dict({
    'all_total_cost': 0.0,
    'all_total_tokens': 11600,
    'avg_cost': 0.0,
    'avg_processing_tokens': 58.18,
    'processing_items': 22,
    'total_cost': 0.0,
    'total_tokens': 1280,
  })
# ---
# name: TestUsageServiceSnapshot.test_get_other_usage_stats_snapshot
  dict({
    'all_total_cost': 0.0,
    'all_total_tokens': 41555,
    'total_cost': 0.0,
    'total_tokens': 2880,
  })
# ---
# name: TestUsageServiceSnapshot.test_get_usage_overview_snapshot
  dict({
    'all_total_price': 0.0,
    'all_total_tokens': 53155,
    'input_tokens': 2400,
    'input_tokens_price': 0.0,
    'output_tokens': 1760,
    'output_tokens_price': 0.0,
    'total_price': 0.0,
    'total_tokens': 4160,
  })
# ---
# name: TestUsageServiceSnapshot.test_get_usage_stats_7days_snapshot
  dict({
    'items': list([
      dict({
        'day': '2026-01-09',
        'total_cost': 0.0,
        'total_tokens': 2600,
      }),
      dict({
        'day': '2026-01-10',
        'total_cost': 0.0,
        'total_tokens': 2860,
      }),
      dict({
        'day': '2026-01-11',
        'total_cost': 0.0,
        'total_tokens': 3120,
      }),
      dict({
        'day': '2026-01-12',
        'total_cost': 0.0,
        'total_tokens': 3380,
      }),
      dict({
        'day': '2026-01-13',
        'total_cost': 0.0,
        'total_tokens': 3640,
      }),
      dict({
        'day': '2026-01-14',
        'total_cost': 0.0,
        'total_tokens': 3900,
      }),
      dict({
        'day': '2026-01-15',
        'total_cost': 0.0,
        'total_tokens': 4160,
      }),
    ]),
  })
# ---
# name: TestUsageServiceSnapshot.test_get_usage_stats_snapshot
  dict({
    'data_processing_usage_stats': dict({
      'all_total_cost': 0.0,
      'all_total_tokens': 11600,
      'avg_cost': 0.0,
      'avg_processing_tokens': 58.18,
      'processing_items': 22,
      'total_cost': 0.0,
      'total_tokens': 1280,
    }),
    'other_usage_stats': dict({
      'all_total_cost': 0.0,
      'all_total_tokens': 41555,
      'total_cost': 0.0,
      'total_tokens': 2880,
    }),
    'usage_overview': dict({
      'all_total_price': 0.0,
      'all_total_tokens': 53155,
      'input_tokens': 2400,
      'input_tokens_price': 0.0,
      'output_tokens': 1760,
      'output_tokens_price': 0.0,
      'total_price': 0.0,
      'total_tokens': 4160,
    }),
    'usage_stats_7days': dict({
      'items': list([
        dict({
          'day': '2026-01-09',
          'total_cost': 0.0,
          'total_tokens': 2600,
        }),
        dict({
          'day': '2026-01-10',
          'total_cost': 0.0,
          'total_tokens': 2860,
        }),
        dict({
          'day': '2026-01-11',
          'total_cost': 0.0,
          'total_tokens': 3120,
        }),
        dict({
          'day': '2026-01-12',
          'total_cost': 0.0,
          'total_tokens': 3380,
        }),
        dict({
          'day': '2026-01-13',
          'total_cost': 0.0,
          'total_tokens': 3640,
        }),
        dict({
          'day': '2026-01-14',
          'total_cost': 0.0,
          'total_tokens': 3900,
        }),
        dict({
          'day': '2026-01-15',
          'total_cost': 0.0,
          'total_tokens': 4160,
        }),
      ]),
    }),
  })
# ---
